<resources>
    <string name="app_name">Find A Doctor</string>

    <string name="action_settings">Settings</string>
    <string name="searchPlaceholder">Search for Doctors</string>
    <string name="lanes">Anesthesiologist</string>
    <string name="lcard">Cardiologist</string>
    <string name="ldent">Dentist</string>
    <string name="lderm">Dermatologist</string>
    <string name="lent">ENT</string>
    <string name="lgyna">Gynaecologist</string>
    <string name="lmicr">Microbiologist</string>
    <string name="lmeds">M. Specialist</string>
    <string name="lonco">Oncologist</string>
    <string name="lopd">OPD</string>
    <string name="lopth">Opthalmologist</string>
    <string name="lpedi">Pediatrician</string>
    <string name="lpsyc">Psychiatrist</string>
    <string name="lradi">Radiologist</string>
    <string name="lsurg">Surgoen</string>

    <string name="login">Log In</string>
    <string name="help">Help</string>
    <string name="notif">Notification</string>
    <string name="moreapps">More Apps</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="about_us">About</string>
    <string name="feedback">Feedback</string>

    <string name="about_us_title">Jigme Dorji Wangchuck National Referral Hospital, Thimphu.</string>
    <string name="about_thimphu">The JDWNRH is the main hospital in Bhutan, located in the capital of Bhutan,
        Thimphu. It was established in 1972, and provides free basic medical treatment as well as advanced
        surgeries and emergency services to citizens from all over the country. It provides the most sophisticated
        health evaluation and management services in the country.</string>
    <string name="App_heading">Find A Doctor App</string>
    <string name="about_App">This Android App Find A Doctor is to check the availability of doctors in the hospital
        especially in the JDWNRH. This App provides platform to avail the services facilitated by doctors and their
        availability in the hospital if users have installed this app.</string>


    <string name="help_feature"> User Manual </string>
    <string name="about_search">This button helps user to search the doctor through their name or by their specialization.</string>

    <string name="about_login">Doctors need to enter their credentials to update their status.</string>
    <string name="about_newsfeed">This feature provides information and alert the users about the latest outbreak of diseases and
        updates the important messages. </string>

    <string name="about_setting">This feature contain list of options such as Login,About us,Help,Feedback,Rate us,Share app
        and More Apps.</string>
    <string name="about_help">This feature provides user manual for the app users to guide them when they encounter with the problems.</string>
    <string name="about_shareApp">This section of setting is to suggest the users to share app to social media
        if it is found very useful and productive.</string>

    <string name="about_aboutFeature">This section of the setting is to make users know more about the App and their functionality.</string>
    <string name="about_feedback"> This feature provides the platform for users to comments and give feedback for the betterment of the App.</string>
    <string name="about_rateUs">This section is to rate the App according to the services facilitated by the App to the users.</string>
    <string name="back">BACK</string>
    <string name="tg">Help feature</string>
    <string name="next">NEXT</string>
    <string name="setting_feature">Setting feature</string>

    <string name="login_button">This provides an Admin and doctors to enter their credentials to update their status.</string>
    <string name="hosp_image_desc">Hospital Image</string>


    <string name="cdapp">CDApp</string>
    <string name="doctor_app">Doctor App</string>
    <string name="queueapp">QueueApp</string>
    <string name="related_apps_for_jdwnrh">Related Apps for JDWNRH</string>
    <string name="mhgapp">mhGApp</string>
    <string name="enter_feedback">Enter Your Feedback / Complaint Here</string>
    <string name="dial">Contact Us</string>
    <string name="cont_det">Tap to Call</string>
    <string name="more_app">More Apps</string>
    <string name="title_activity_dental">Dental</string>
    <string name="login_feature">Login feature</string>


</resources>
