<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bt.gov.jdwnrh.www.findadoctor.MainActivity">

    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/news"
        android:visible="true"
        android:title="@string/notif"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/about_us"
        android:orderInCategory="101"
        android:title="@string/about_us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:enabled="true"
        android:orderInCategory="102"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback"
        android:orderInCategory="103"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/rate_app"
        android:orderInCategory="104"
        android:title="@string/rate_app"
        app:showAsAction="never" />

    <item
            android:id="@+id/share_app"
            android:orderInCategory="105"
            android:title="@string/share_app"
            app:showAsAction="never" />

    <item
        android:id="@+id/more"
        android:orderInCategory="106"
        android:title="@string/moreapps"
        android:visible="true"
        app:showAsAction="never" />

</menu>
