<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.jdwnrh.www.findadoctor.AboutUs">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/thimphu"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/about_us_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/fab_margin"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:text="@string/about_thimphu"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginBottom="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/App_heading"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/fab_margin"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/about_App"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginBottom="@dimen/fab_margin" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
