<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.jdwnrh.www.findadoctor.setting">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:text="@string/setting_feature"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="left"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="19dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded,SpUsage" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:text="@string/about_setting"
        android:textSize="16dp"
        android:gravity="left"
        android:textStyle="italic"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded,SpUsage" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:text="@string/tg"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="left"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="149dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="147dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded,SpUsage" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:text="@string/about_help"
        android:textSize="16dp"
        android:textStyle="italic"
        android:gravity="left"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        tools:ignore="RtlHardcoded,SpUsage" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/share_app"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="left"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/textView15"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="189dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView15"
        tools:ignore="RtlHardcoded,SpUsage" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:text="@string/about_shareApp"
        android:textSize="16dp"
        android:textStyle="italic"
        android:gravity="left"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt2"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded,SpUsage" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/back"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="48dp"
        android:onClick="onClick"
        tools:ignore="RtlHardcoded,SpUsage" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="49dp"
        android:onClick="onClick"
        android:text="@string/next"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SpUsage"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
